--- a/css/main.css
+++ b/css/main.css
@@ -595,6 +595,16 @@ p {
           align-items: center;
 }
 
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
 /* Site Nav */
 .site-nav {
   display: -webkit-box;
