--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -25,6 +25,14 @@
     align-items: center; 
 }
 
+.menu-button {
+    display: inline-flex;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+}
+
 /* Site Nav */
 
 .site-nav {
