--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,25 @@ body {
   color: var(--main-txt-cl);
 }
 
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 480px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 .section-title {
   font-family: 'Roboto';
   font-style: normal;
@@ -71,10 +90,28 @@ p {
 }
 
 .container {
-  width: 1200px;
-  padding: 0 15px;
-  margin: 0 auto;
-  /* outline: 2px solid turquoise; */
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .btn {
@@ -586,6 +623,10 @@ p {
 }
 
 /* Main Nav */
+.header {
+  position: relative;
+}
+
 .main-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -603,6 +644,35 @@ p {
   padding: 0;
   border: none;
   background-color: transparent;
+}
+
+.menu-button .icon-close {
+  display: none;
+}
+
+.menu-button.is-open .icon-close {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.menu-container {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 796px;
+  background-color: aquamarine;
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.menu-container.is-open {
+  display: block;
 }
 
 /* Site Nav */
@@ -737,50 +807,56 @@ p {
 }
 
 /* -- ABOUT -- */
-.about {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding-top: 94px;
-  padding-bottom: 94px;
+@media screen and (min-width: 768px) {
+  .about__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
-.about__container {
-  width: 1200px;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
-.about__title {
-  margin-top: 0;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: var(--ls-primary);
-  color: var(--nav-cl);
-}
-
-.about__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (min-width: 1200px) {
+  .about__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
 }
 
 .about__item {
-  display: block;
-  content: "";
-  width: 270px;
-  height: 120px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: #F5F4FA;
   margin-bottom: 30px;
 }
 
-.about__item:not(:first-child) {
-  margin-left: 30px;
+@media screen and (min-width: 768px) {
+  .about__item {
+    width: 354px;
+  }
+  .about__item:nth-child(odd) {
+    margin-right: 30px;
+  }
+  .about__item:nth-child(-n+2) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .about__item {
+    width: 270px;
+    height: 100%;
+  }
+  .about__item:nth-child(-n+2) {
+    margin-bottom: 0;
+  }
+  .about__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .about__txt {
@@ -790,8 +866,21 @@ p {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: var(--ls-primary);
+  text-align: center;
   text-transform: uppercase;
   color: var(--nav-cl);
+}
+
+@media screen and (min-width: 768px) {
+  .about__txt {
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .about__txt {
+    text-align: left;
+  }
 }
 
 .about__meta {
@@ -814,7 +903,6 @@ p {
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 30px;
-  width: 270px;
   height: 120px;
   background: #F5F4FA;
   border-radius: 4px;
@@ -832,13 +920,19 @@ p {
 
 /* -- WORK -- */
 .work {
-  padding-top: 94px;
+  padding-top: 0;
   padding-bottom: 94px;
   /* outline: 1px solid plum; */
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   margin: 0 auto;
+}
+
+@media screen and (max-width: 1199px) {
+  .work {
+    display: none;
+  }
 }
 
 .work__title {
@@ -901,22 +995,64 @@ p {
 
 /* -- TEAM -- */
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   background-color: var(--secondary-bg-cl);
 }
 
-.card-set {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: 0px;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding: 0;
+@media screen and (max-width: 767.98px) {
+  .card-set {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    display: block;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .card-set:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .card-set {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-preferred-size: calc( (100%-2*30px)/2);
+        flex-basis: calc( (100%-2*30px)/2);
+  }
+  .card-set:nth-child(odd) {
+    margin-right: 30px;
+  }
+  .card-set:nth-child(-n+2) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .card-set {
+    padding-top: 94px;
+    padding-bottom: 94px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .member-group {
@@ -937,7 +1073,6 @@ p {
 }
 
 .team-card {
-  width: 270px;
   margin-right: 30px;
   background-color: var(--hero-txt-cl);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -945,8 +1080,28 @@ p {
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-card:last-child {
-  margin-right: 0;
+@media screen and (max-width: 767.98px) {
+  .team-card:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .team-card:nth-child(odd) {
+    margin-right: 30px;
+  }
+  .team-card:nth-child(-n+2) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-card {
+    width: 270px;
+  }
+  .team-card:last-child {
+    margin-right: 0;
+  }
 }
 
 .member-title {
@@ -984,29 +1139,80 @@ p {
   margin-bottom: 50px;
 }
 
-.clients__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+@media screen and (max-width: 767.98px) {
+  .clients__title {
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.18;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients__title {
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.18;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .clients__list {
+    margin: -15px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
 }
 
 .clients__item {
+  margin-bottom: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 170px;
   height: 92px;
   color: #AFB1B8;
   border: 1px solid #AFB1B8;
@@ -1020,8 +1226,36 @@ p {
   border-color: var(--accent-cl);
 }
 
-.clients__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (max-width: 479.98px) {
+  .clients__item {
+    width: calc((100%-2*30px)/2);
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .clients__item {
+    margin: 15px;
+    width: 210px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients__item {
+    margin-right: 30px;
+    width: 226px;
+  }
+  .clients__item:nth-child(3n) {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    width: 170px;
+  }
+  .clients__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .clients__icon {
