--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -15,6 +15,21 @@ body {
     color: var(--main-txt-cl);    
 }
 
+.section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    
+    @media screen and (min-width: 480px) {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
+}
+
 .section-title {
     font-family: 'Roboto';
     font-style: normal;
