--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,6 +1,44 @@
-.container { 
-    width: 1200px;
-    padding: 0 15px;
-    margin: 0 auto;
-    /* outline: 2px solid turquoise; */
+// .container { 
+//     width: 1200px;
+//     padding-left: 15px;
+//     padding-right: 15px;
+//     margin-left: auto;
+//     margin-right: auto;
+//     outline: 2px solid turquoise;
+// }
+
+.container {
+    padding-left: 15px;
+    padding-right: 15px;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    // mobile screen from 480px
+    @media screen and (min-width: 480px) {
+        width: 480px;
+    }
+
+    // @include mq(mobile) {
+    //     width: 480px;
+    // }
+
+    // tablet screen
+    @media screen and (min-width: 768px) {
+        width: 768px;
+    }
+
+    // @include mq(tablet) {
+    //     width: 768px;
+    // }
+
+    // desktop screen
+    @media screen and (min-width: 1200px) {
+        width: 1200px;
+    }
+
+    // @include mq(desktop) {
+    //     width: 1200px;
+    // }
+
 }
