--- a/sass/layouts/_about.scss
+++ b/sass/layouts/_about.scss
@@ -1,51 +1,125 @@
 /* -- ABOUT -- */
 
-.about {
-    display: flex;
-    padding-top: 94px;
-    padding-bottom: 94px;
-}
+// .about {
+//     display: flex;
+//     padding-top: 94px;
+//     padding-bottom: 94px;
+// }
 
-.about__container {
-    width: 1200px;
-    padding: 0 15px;
-    margin: 0 auto;
-}
+// .about__container {
+//     @include mq(tablet) {
+//         display: flex;
+//     }
+// }
 
-.about__title {
-    margin-top: 0;
+// .about__title {
+//     margin-top: 0;
+//     margin-bottom: 10px;
 
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
-    letter-spacing: var(--ls-primary);
+//     font-weight: 700;
+//     font-size: 36px;
+//     line-height: 1.17;
+//     text-align: center;
+//     letter-spacing: var(--ls-primary);
 
-    color: var(--nav-cl);   
-}
+//     color: var(--nav-cl);   
+// }
 
-.about__list {
-    display: flex;
+.about__list {    
+
+    @include mq(tablet) {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        // margin: -15px;
+
+        
+    }
+
+    @include mq(desktop) {
+        display: flex;
+        flex-wrap: nowrap;
+        // margin: -15px;
+    }
+
 }
 
 .about__item {
-    display: block;
-    content: "";
-    width: 270px;
-    height: 120px;
+    // align-items: center;
+    // outline: 1px solid green;
+
+    // display: block;
+    // content: "";
+    @include mq(tablet) {
         
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: #F5F4FA;
+        width: 354px;
+
+        &:nth-child(odd) {
+            margin-right: 30px;
+        }
+
+        &:nth-child(-n+2) {
+            margin-bottom: 30px;
+        }
+
+       
+        // flex-basis: calc(
+        //     (100%-2*30px)/2
+        // );
+        // margin: 15px;
+        
+        // height: 120px;
+        
+    }
+
+    @include mq(desktop) {
+        width: 270px;
+        height: 100%;
+
+        &:nth-child(-n+2) {
+            margin-bottom: 0;
+        }
+
+        &:not(:last-child) {
+            margin-right: 30px;
+        }
+    //    background-size: contain;
+    //    background-repeat: no-repeat;
+    //    background-position: center;
+        // flex-basis: calc(
+        //     (100%-4*30px)/4
+        // );
+        // margin: 15px;
+        
+    //    &:not(:first-child) {
+    //     margin-left: 30px;
+    //    }
+    }
+
+  
+
+    // @include mq(mobile-only) {
+    //     margin-bottom: 30px;
+    //     // width: 100%;
+    //     // height: 120px;
+        
+    // }
+    
+    // width: 270px;
+    // height: 120px;
+        
+    // background-size: contain;
+    // background-repeat: no-repeat;
+    // background-position: center;
+    // background-color: #F5F4FA;
     margin-bottom: 30px;
 
-    &:not(:first-child) {
-        margin-left: 30px;
-    }
+    
 }
 
 .about__txt {
+    
+    
     margin-top: 0;
     margin-bottom: 10px;
 
@@ -53,9 +127,20 @@
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: var(--ls-primary);
+    text-align: center;
     text-transform: uppercase;
     
     color: var(--nav-cl);
+
+    @include mq(tablet) {
+        text-align: left;
+
+        
+    }
+
+    @include mq(desktop) {
+        text-align: left;
+    }
 }
 
 .about__meta {
@@ -75,7 +160,6 @@
     justify-content: center;
     margin-bottom: 30px;
 
-    width: 270px;
     height: 120px;
     background: #F5F4FA;
     border-radius: 4px;
