--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -19,6 +19,9 @@
 }
 
 /* Main Nav */
+.header {
+    position: relative;
+}
 
 .main-nav {
     display: flex;
@@ -31,6 +34,37 @@
     padding: 0;
     border: none;
     background-color: transparent;
+}
+
+.menu-button .icon-close {
+    display: none;
+}
+
+.menu-button.is-open .icon-close {
+    display: block;
+}
+
+.menu-button.is-open .icon-menu {
+    display: none;
+}
+
+.menu-container {
+    display: none;
+
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 796px;
+
+    background-color: aquamarine;
+    padding: 20px;
+    text-align: center;
+    font-size: 20px;
+
+    &.is-open {
+        display: block;
+    }
 }
 
 /* Site Nav */
