--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,19 +1,60 @@
 /* -- TEAM -- */
 
 .team {
-    padding-top: 94px;
-    padding-bottom: 94px;
-    justify-content: center;
+    // padding-top: 94px;
+    // padding-bottom: 94px;
+    // justify-content: center;
 
     background-color: var(--secondary-bg-cl);
 }
 
 .card-set {
-    display: flex;
-    margin-left: 0px;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding: 0;
+    // display: flex;
+    // margin-left: 0px;
+    // margin-top: 0;
+    // margin-bottom: 0;
+    // padding: 0;
+
+    @media screen and (max-width: 767.98px) {
+        padding-top: 60px;
+        padding-bottom: 60px;
+        // display: block;
+        align-items: center;
+        justify-content: center;
+
+        &:not(:last-child) {
+            margin-right: 30px;
+        } 
+        
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        flex-basis: calc(
+            (100%-2*30px)/2
+        );
+
+
+        &:nth-child(odd) {
+            margin-right: 30px;
+        }
+
+        &:nth-child(-n+2) {
+            margin-bottom: 30px;
+        }
+    }
+
+    @media screen and (min-width: 1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+    }
 }
 
 .member-group {
@@ -31,7 +72,7 @@
 }
 
 .team-card {
-    width: 270px;
+    // width: 270px;
     margin-right: 30px;
 
     background-color: var(--hero-txt-cl);
@@ -41,8 +82,46 @@
                 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 
+    // &:last-child {
+    //     margin-right: 0;
+    // }
+
+    @media screen and (max-width: 767.98px) {
+        
+        &:not(:last-child) {
+            margin-right: 30px;
+        } 
+        
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+        
+
+
+        &:nth-child(odd) {
+            margin-right: 30px;
+        }
+
+        &:nth-child(-n+2) {
+            margin-bottom: 30px;
+        }
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 270px;
+    // margin-right: 30px;
+
+    // background-color: var(--hero-txt-cl);
+
+    // box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+    //             0px 1px 1px rgba(0, 0, 0, 0.14),
+    //             0px 2px 1px rgba(0, 0, 0, 0.2);
+    // border-radius: 0px 0px 4px 4px;
+
     &:last-child {
         margin-right: 0;
+    }
+        
     }
 }
 
