--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,9 +2,11 @@
 @import "./utils/vars";
 
 // base styles
+@import "./base/mixins";
 @import "./base/common";
 @import "./base/reset";
 @import "./base/container";
+
 
 // components
 @import "./components/button";
