--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -226,39 +226,75 @@
 // Footer form
 
 .footer-form {
-    display: block;
+    display: inline;
     justify-content: center;
     align-items: center;
-
-    padding-top: 0px;
-    padding-bottom: 0px;
-    width: 570px;
+    text-align: center;
+    width: 100%;
     
-    margin-right: auto;
-    margin-left: 93px;
+    
+
+    // @include mq(tablet) {
+    // }
+
+    @include mq(desktop) {
+
+        padding-top: 0px;
+        padding-bottom: 0px;
+
+        margin-right: auto;
+        margin-left: 93px;
+
+        width: 570px;
+    
+        display: block;
+        text-align: start;
+        justify-content: center;
+        align-items: center;
+    }
 
     /* outline: 1px solid tomato; */
 }
 
 .footer-submit {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        
+
+    @include mq(tablet) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    @include mq(desktop) {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: baseline; 
+    }
 }
 
 .footer-input {
-    margin-right: 12px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-left: 16px;
+    margin-right: 15px;
+    margin-left: 15px;
+    margin-bottom: 20px;
+    padding: 15px 16px;
     
-    width: 358px;
+    width: 450px;
     height: 50px;
 
     font-size: 16px;
     line-height: 1.25;
 
     display: flex;
+
+    
+
     align-items: center;
     letter-spacing: 0.03em;
 
@@ -275,6 +311,20 @@
     &:hover,
     &:focus {
         border-color: var(--accent-cl);
+    }
+
+    @include mq(tablet) {
+        
+        width: 450px;
+        
+    }
+
+    @include mq(desktop) {
+        margin-right: 12px;
+        margin-left: 0;
+        
+        
+        width: 358px;
     }
 }
 
