--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -10,27 +10,43 @@
     justify-content: center;
     margin-bottom: 50px;
 
-    @include mq(mobile-only) {
-        // font-family: 'Roboto';
-        // font-style: normal;
-        font-weight: 700;
-        font-size: 28px;
-        line-height: 1.18;
+    // @include mq(mobile-only) {
+    //     // font-family: 'Roboto';
+    //     // font-style: normal;
+    //     font-weight: 700;
+    //     font-size: 28px;
+    //     line-height: 1.18;
         
-        // text-align: center;
-        // letter-spacing: 0.03em;
+    //     // text-align: center;
+    //     // letter-spacing: 0.03em;
 
-        // color: #212121;
+    //     // color: #212121;
+    // }
+
+    @media screen and (max-width: 767.98px) {
+        // margin: -15px;
+        // display: flex;
+        // flex-wrap: wrap;
+        // align-items: center;
+        // justify-content: center;
+        // flex-basis: calc(
+        //     (100%-2*30px)/2
+        // ); 
+        
     }
     
-    @include mq(tablet) {
+    // @include mq(tablet)
+    
+    @media screen and (min-width: 768px) and (max-width: 1199.98px) {
         font-weight: 700;
         font-size: 28px;
         line-height: 1.18;
         
     }
 
-    @include mq(desktop) {
+    // @include mq(desktop)
+
+    @media screen and (min-width: 1200px) {
         font-weight: 700;
         font-size: 36px;
         line-height: 1.17;
@@ -39,33 +55,74 @@
 }
 
 .clients__list {
+    
     // @media screen and (max-width: 479.98px) {
     //     display: flex;
     //     flex-wrap: wrap;
     // }
     
-    @include mq(mobile-only) {
-        margin: -15px;
+    // @include mq(mobile-only) {
+    //     margin: -15px;
 
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        // flex-direction: column;
+    //     display: flex;
+    //     flex-wrap: wrap;
+    //     justify-content: space-between;
+    //     // flex-direction: column;
         
         
-        // width: calc((100%-2*30px)/2);
+    //     width: calc((100%-2*30px)/2);
         
         
+        
+    // }
+    @media screen and (max-width: 767.98px) {
+        // margin: -15px;
+
+        // display: flex;
+        // flex-wrap: wrap;
+        // align-items: center;
+        justify-content: center;
+        // flex-basis: calc(
+        //     (100%-2*30px)/2
+        // ); 
+        
+        // display: block;
+        // width: 100%;
+        // height: 622px;
+
+        
+        // &:not(:last-child) {
+        //     margin-right: 30px;
+        // } 
         
     }
 
-    @include mq(tablet) {
+    @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+        
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        
-        // margin: -15px;
+
+        // width: 450px;
+        // height: 622px;
+
+        // &:nth-child(odd) {
+        //     margin-right: 30px;
+        // }
+
+        // &:nth-child(-n+2) {
+        //     margin-bottom: 30px;
+        // }
     }
+
+    
+    // @include mq(tablet) {
+    //     display: flex;
+    //     flex-wrap: wrap;
+    //     justify-content: center;
+        
+    //     // margin: -15px;
+    // }
 
     @include mq(desktop) {
         display: flex;
@@ -77,10 +134,10 @@
 .clients__item {
     
     margin-bottom: 30px;
+    margin-right: 30px;
 
     display: flex;
     flex-wrap: wrap;
-    // flex-direction: column;
     align-items: center;
     justify-content: center;
     
@@ -97,7 +154,6 @@
             color: var(--accent-cl);
             border-color: var(--accent-cl);
         }   
-
     // @include mq(mobile) {
     //     width: 210px;
 
@@ -110,25 +166,22 @@
             
     // }
     @media screen and (max-width: 479.98px) {
-        width: calc((100%-2*30px)/2);
+        width: 210px;
+        
+        &:nth-child(2n) {
+            margin-right: 0;
+        }
     }
 
-    @include mq(mobile-only) {
-        margin: 15px;
-        // flex-direction: column;
-        // width: calc((100%-2*30px)/2);
-        // width: 100%;
-        width: 210px;
-        // width: calc((100%-2*30px)/2);
-        // &:nth-child(2n-1) {
-        //     margin-right: 30px;
-        // }
+    // @include mq(mobile-only) {
+    //     margin-right: 30px;
+    //     width: calc((100%-2*30px)/2);
 
-        // &:nth-child(2n) {
-        //     margin-right: 0;
-        // }
+    //     &:nth-child(2n) {
+    //         margin-right: 0;
+    //     }
             
-    }  
+    // }  
         
     @include mq(tablet) {
         margin-right: 30px;
