--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -26,6 +26,19 @@
 .main-nav {
     display: flex;
     align-items: center; 
+
+    // @media screen and (max-width: 767.98px) {    
+        
+    // }
+
+    // @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+        
+    // }
+
+    // @media screen and (min-width: 1200px) {
+          
+    // }
+     
 }
 
 .menu-button {
