--- a/css/main.css
+++ b/css/main.css
@@ -331,6 +331,12 @@ p {
   color: #FFFFFF;
 }
 
+@media screen and (min-width: 768px) {
+  .join-title {
+    margin-top: 0;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .join-title {
     margin-top: 0;
@@ -338,7 +344,6 @@ p {
 }
 
 .footer-link {
-  margin-bottom: 60px;
   background-color: rgba(255, 255, 255, 0.1);
   color: #ffffff;
   -webkit-transition: color var(--animation), background-color var(--animation);
@@ -555,6 +560,7 @@ p {
 .link-label {
   font-size: 14px;
   line-height: 1.71;
+  width: 100%;
   letter-spacing: 0.03em;
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -570,7 +576,6 @@ p {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
-  width: 100%;
   /* outline: 1px solid tomato; */
 }
 
@@ -606,6 +611,7 @@ p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  width: 100%;
 }
 
 @media screen and (min-width: 768px) {
@@ -645,17 +651,13 @@ p {
 }
 
 .footer-input {
-  margin-right: 15px;
-  margin-left: 15px;
   margin-bottom: 20px;
   padding: 15px 16px;
-  width: 450px;
+  width: 100%;
   height: 50px;
   font-size: 16px;
   line-height: 1.25;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: inline-block;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -675,9 +677,12 @@ p {
   border-color: var(--accent-cl);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 480px) {
   .footer-input {
     width: 450px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 
@@ -1507,6 +1512,30 @@ p {
 
 .footer-logo__title--white {
   color: var(--hero-txt-cl);
+}
+
+/* Footer Block */
+@media screen and (min-width: 768px) {
+  .footer-block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 0;
+  }
 }
 
 /* Footer Group */
