--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -216,6 +216,7 @@
 .link-label {
     font-size: 14px;
     line-height: 1.71;
+    width: 100%;
 
     letter-spacing: 0.03em;
     text-decoration-line: underline;
@@ -230,11 +231,13 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 100%;
+    // width: 100%;
     
     
 
     // @include mq(tablet) {
+    //     display: flex;
+    //     justify-content: center;
     // }
 
     @include mq(desktop) {
@@ -257,10 +260,11 @@
 }
 
 .footer-submit {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 
         
 
@@ -280,18 +284,20 @@
 }
 
 .footer-input {
-    margin-right: 15px;
-    margin-left: 15px;
+    
+    // margin-right: 0;
+    // margin-left: 0;
     margin-bottom: 20px;
     padding: 15px 16px;
     
-    width: 450px;
+    // width: calc(100%-30px);
+    width: 100%;
     height: 50px;
 
     font-size: 16px;
     line-height: 1.25;
 
-    display: flex;
+    display: inline-block;
 
     
 
@@ -313,11 +319,16 @@
         border-color: var(--accent-cl);
     }
 
-    @include mq(tablet) {
-        
+    @include mq(mobile) {
         width: 450px;
-        
+        display: flex;
     }
+
+    // @include mq(tablet) {
+        
+    //     width: 450px;
+        
+    // }
 
     @include mq(desktop) {
         margin-right: 12px;
