--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,52 +1,31 @@
 /* -- CLIENTS -- */
 
 .clients {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @include mq(desktop) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+
+    }
 }
 
 .clients__title {
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
-
-    // @include mq(mobile-only) {
-    //     // font-family: 'Roboto';
-    //     // font-style: normal;
-    //     font-weight: 700;
-    //     font-size: 28px;
-    //     line-height: 1.18;
-        
-    //     // text-align: center;
-    //     // letter-spacing: 0.03em;
-
-    //     // color: #212121;
-    // }
-
-    @media screen and (max-width: 767.98px) {
-        // margin: -15px;
-        // display: flex;
-        // flex-wrap: wrap;
-        // align-items: center;
-        // justify-content: center;
-        // flex-basis: calc(
-        //     (100%-2*30px)/2
-        // ); 
-        
-    }
     
-    // @include mq(tablet)
-    
-    @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+    // @media screen and (min-width: 768px) and (max-width: 1199.98px)
+    @include mq(tablet) {
         font-weight: 700;
         font-size: 28px;
         line-height: 1.18;
         
     }
 
-    // @include mq(desktop)
-
-    @media screen and (min-width: 1200px) {
+    // @media screen and (min-width: 1200px)
+    @include mq(desktop) {
         font-weight: 700;
         font-size: 36px;
         line-height: 1.17;
@@ -55,97 +34,41 @@
 }
 
 .clients__list {
-    
-    // @media screen and (max-width: 479.98px) {
-    //     display: flex;
-    //     flex-wrap: wrap;
-    // }
-    
-    // @include mq(mobile-only) {
-    //     margin: -15px;
+    margin: -15px;
+    display: flex;
+    flex-wrap: wrap;    
+    justify-content: center;   
 
-    //     display: flex;
-    //     flex-wrap: wrap;
-    //     justify-content: space-between;
-    //     // flex-direction: column;
-        
-        
-    //     width: calc((100%-2*30px)/2);
-        
-        
-        
-    // }
-    @media screen and (max-width: 767.98px) {
-        // margin: -15px;
-
-        // display: flex;
-        // flex-wrap: wrap;
-        // align-items: center;
-        justify-content: center;
-        // flex-basis: calc(
-        //     (100%-2*30px)/2
-        // ); 
-        
-        // display: block;
-        // width: 100%;
-        // height: 622px;
-
-        
-        // &:not(:last-child) {
-        //     margin-right: 30px;
-        // } 
-        
-    }
-
-    @media screen and (min-width: 768px) and (max-width: 1199.98px) {
-        
+    @include mq(tablet) {  
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
 
-        // width: 450px;
-        // height: 622px;
-
-        // &:nth-child(odd) {
-        //     margin-right: 30px;
-        // }
-
-        // &:nth-child(-n+2) {
-        //     margin-bottom: 30px;
-        // }
     }
-
-    
-    // @include mq(tablet) {
-    //     display: flex;
-    //     flex-wrap: wrap;
-    //     justify-content: center;
-        
-    //     // margin: -15px;
-    // }
 
     @include mq(desktop) {
         display: flex;
         flex-wrap: nowrap;
-        // margin: -15px;
+
     }
 }
 
 .clients__item {
     
-    margin-bottom: 30px;
-    margin-right: 30px;
-
+    // margin-bottom: 30px;
+    // margin-right: 30px;
+    margin: 15px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    
+    width: calc((100% - 2 * 30px) / 2);
     height: 92px;
 
     color: #AFB1B8;
     border: 1px solid #AFB1B8;
-    border-radius: 4px;      
+    border-radius: 4px;
+    
+    
 
     transition: color var(--animation), border-color var(--animation);
 
@@ -153,56 +76,28 @@
         &:focus {
             color: var(--accent-cl);
             border-color: var(--accent-cl);
-        }   
-    // @include mq(mobile) {
-    //     width: 210px;
-
-    //     &:nth-child(2n-1) {
-    //         margin-right: 30px;
-    //     }
-    //     &:nth-child(2n) {
-    //         margin-right: 0;
-    //     }
-            
-    // }
-    @media screen and (max-width: 479.98px) {
-        width: 210px;
-        
-        &:nth-child(2n) {
-            margin-right: 0;
-        }
-    }
-
-    // @include mq(mobile-only) {
-    //     margin-right: 30px;
-    //     width: calc((100%-2*30px)/2);
-
-    //     &:nth-child(2n) {
-    //         margin-right: 0;
-    //     }
-            
-    // }  
+        }     
         
     @include mq(tablet) {
-        margin-right: 30px;
+        // margin-right: 30px;
         // margin: 15px;
-        width: 226px;
-        // width: calc((100%-3*30px)/3);
+        // width: 226px;
+        width: calc((100%-3*30px)/3);
         
         
-        &:nth-child(3n) {
-            margin-right: 0;
-        }
+        // &:nth-child(3n) {
+        //     margin-right: 0;
+        // }
     }
 
     @include mq(desktop) {
         // margin: 15px;
-        width: 170px;
-        // width: calc((100%-6*30px)/6);
+        // width: 170px;
+        width: calc((100%-6*30px)/6);
 
-        &:not(:last-child) {
-            margin-right: 30px;
-        }  
+        // &:not(:last-child) {
+        //     margin-right: 30px;
+        // }  
     }
 }
 
